👌 fix: Fix displayed logo on mobile app and webapp + add translation for university partner

--- a/app/src/presentation/components/card/PartnerUniversitiesCard.module.css
+++ b/app/src/presentation/components/card/PartnerUniversitiesCard.module.css
@@ -14,8 +14,15 @@
     display: flex;
     justify-content: center;
     margin-top: 24px;
+    margin-bottom: 20px;
 }
 
 .inactive-button {
     background-color: #d9d9d9;
+}
+
+@media (min-width: 768px) {
+    .container-button {
+        margin-bottom: 0px;
+    }
 }
