--- a/app/src/presentation/components/card/UniversityCard.module.css
+++ b/app/src/presentation/components/card/UniversityCard.module.css
@@ -1,5 +1,6 @@
 .container {
     align-items: center;
+    border-radius: 5px;
     display: flex;
     flex-direction: row;
     margin-top: 12px;
@@ -11,9 +12,12 @@
 
 .logo {
     background-color: white;
-    height: 96px;
     border-radius: 100%;
-    margin: 24px;
+    flex-shrink: 0;
+    height: 96px;
+    margin-left: 20px;
+    object-fit: contain;
+    object-position: center;
     width: 96px;
 }
 
@@ -30,6 +34,11 @@
     line-height: 10px;
 }
 
+.text-container {
+    margin: 24px 0px 24px 10px;
+    padding-right: 10px;
+}
+
 .title {
     color: #000;
     font-family: 'Maven Pro';
@@ -37,4 +46,10 @@
     font-style: normal;
     font-weight: 700;
     line-height: 25px;
+}
+
+@media (min-width: 768px) {
+    .container {
+        margin-top: 10px;
+    }
 }
